# lurchhome

./: .env.example  .gitignore  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md
docker/config/: redis.conf
src/: home_assistant_controller.py  lurch_brain.py  main.py
src/brain/: lurch_brain.py  lurch_prompt.py
src/integrations/: home_assistant_connector.py
src/integrations/ha/: ha_mcp_connector.py  ha_utils.py  ha_ws_connector.py
src/lurchhome/: __init__.py  main.py
src/lurchhome/brain/: lurch_brain.py
src/lurchhome/integrations/ha/: ha_mcp_connector.py  ha_ws_connector.py
src/lurchhome/persistence/: storage_handler.py
src/lurchhome/tools/: lurch_with_tools.py  tools_interfaces.py  tools_utils.py
src/persistence/: storage_handler.py
src/tools/: lurch_callable_tools.py  tools_utils.py
tests/: test_ha_mcp_connector.py  test_home_assistant_connector.py
